--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div class="form">
         <input
-          type="text"
+          type="number"
           name="text"
           id="text"
           placeholder="Input your number"
