--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <p>Level: <span id="levels">1</span></p>
 
-      <p>Tryes: <span id="tryes">0</span></p>
+      <p>Tries: <span id="tryes">0</span></p>
     </div>
 
     <script src="app.js"></script>
