--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
       <p id="result">Type bellow</p>
 
-      <div class="form">
+      <form onsubmit="return false;">
         <input
           type="number"
-          name="text"
-          id="text"
+          name="number"
+          id="number"
           placeholder="Input your number"
         />
 
         <button type="submit" id="submit">Submit</button>
-      </div>
+      </form>
 
       <p>Level: <span id="levels">1</span></p>
 
